# ppt_file

./: .gitignore  LICENSE  README  build.xml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: on-push-pre-release.yml  on-push-test.yml  on-release-publish.yml
_developer/sphinx.py/: conf.py  index.rst
src/dNG/data/: file.py
src/dpt_file/: file.py
