[build-system]
requires = [ "setuptools", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies", "optional-dependencies", "scripts", "version"]
requires-python = ">=3.9"

name = "ppt_file"
description = "Working with a file abstraction layer"
readme = "README"
authors = [{name = "NotTheEvilOne", email = "no-reply@vplace.de"}]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/NotTheEvilOne/ppt_file"

[tool.pytest.ini_options]
pythonpath = [ "src" ]
